# r2seedo

./: LICENSE  README.md  environment.yml  pyproject.toml
models/: .gitignore  README.md  lunar_lander.pt.dvc
models/deep-q-space-invaders/: README.md  eval_results.json  model.joblib.dvc  signature.txt
models/lunar-lander/: README.md  eval_results.json  model.joblib.dvc  signature.txt
models/lunar_lander/: model.joblib.dvc  public.pem  signature.txt
models/q-table-frozen-lake/: README.md  eval_results.json  model.joblib.dvc  signature.txt
notebooks/: README.md  deep_q_space_invaders.ipynb  lunar_lander.ipynb  po_lunar_lander.ipynb  q_learning_frozen_lake.ipynb  q_learning_taxi.ipynb  q_learning_tiny_maze.ipynb
src/r2seedo/: __init__.py  io.py
src/r2seedo/models/: base_layers.py  dqn.py  q_table.py  simple_policy_net.py
src/r2seedo/utils/: __init__.py  core.py  environment.py  training.py
tests/: __init__.py  test_io.py
tests/test_models/: __init__.py  test_base_layers.py  test_dqn.py  test_q_table.py  test_simple_policy_net.py
tests/test_utils.py/: __init__.py  test_core.py
